--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Aaron Greenwald",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "lodash": "^4.17.2",
     "node-fetch": "^1.6.3",
     "parse-link-header": "^0.4.1"
