--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": ":",
+    "pretest": "eslint .",
+    "test": "jasmine .",
     "build": ":",
     "release": "wnpm-release -- --no-shrinkwrap",
     "postrelease": "echo \"##teamcity[buildStatus text='Version: `jq -r '.version' package.json`; {build.status.text}']\""
@@ -23,5 +24,10 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "devDependencies": {
+    "eslint": "^3.12.2",
+    "eslint-config-wix": "^1.1.3",
+    "jasmine": "^2.5.2"
   }
 }
